--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Uaa by elan2wang</title>
+    <title>UAA | Jian Wang</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="../stylesheets/styles.css">
+    <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -17,28 +17,24 @@
       <header>
         <h1>UAA</h1>
         <p>User Authentication and Authorization System</p>
-
         <p class="view"><a href="https://github.com/elan2wang/UAA">View the Project on GitHub <small>elan2wang/UAA</small></a></p>
-
-
         <ul>
           <li><a href="https://github.com/elan2wang/UAA/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/elan2wang/UAA/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/elan2wang/UAA">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
+      
       <section>
-        <h1>
-<a name="uaa" class="anchor" href="#uaa"><span class="octicon octicon-link"></span></a>UAA</h1>
-
-<p>User Authentication and Authorization System</p>
+        {{ content }}
       </section>
+      
       <footer>
         <p>This project is maintained by <a href="https://github.com/elan2wang">elan2wang</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="../javascripts/scale.fix.js"></script>
     
   </body>
 </html>
